hphp/test/zend/good/Zend/tests/errmsg_030.php.expectf

Fatal error: unknown class self in %s/errmsg_030.php on line 3
